@@ -30,7 +30,7 @@ import androidx.annotation.VisibleForTesting;
 import androidx.annotation.WorkerThread;
 import androidx.core.content.ContextCompat;
 
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.signal.core.util.Base64;
 import org.signal.core.util.BidiUtil;
@@ -38,11 +38,12 @@ import org.signal.core.util.logging.Log;
 import org.signal.storageservice.storage.protos.groups.local.DecryptedGroup;
 import org.signal.storageservice.storage.protos.groups.local.DecryptedGroupChange;
 import org.thoughtcrime.securesms.R;
-import org.thoughtcrime.securesms.backup.v2.proto.GroupChangeChatUpdate;
-import org.thoughtcrime.securesms.backup.v2.proto.GroupCreationUpdate;
+import org.signal.archive.proto.GroupChangeChatUpdate;
+import org.signal.archive.proto.GroupCreationUpdate;
 import org.thoughtcrime.securesms.components.emoji.EmojiProvider;
 import org.thoughtcrime.securesms.components.emoji.parsing.EmojiParser;
 import org.thoughtcrime.securesms.components.transfercontrols.TransferControlView;
+import org.thoughtcrime.securesms.database.CollapsedState;
 import org.thoughtcrime.securesms.database.MessageTypes;
 import org.thoughtcrime.securesms.database.documents.IdentityKeyMismatch;
 import org.thoughtcrime.securesms.database.documents.NetworkFailure;
@@ -115,7 +116,10 @@ public abstract class MessageRecord extends DisplayRecord {
   private final int                      revisionNumber;
   private final long                     pinnedUntil;
   private final RecipientId              deletedBy;
+  private final CollapsedState           collapsedState;
+  private final long                     collapsedHeadId;
   private final MessageExtras            messageExtras;
+  private final boolean                  starred;
 
   protected Boolean isJumboji = null;
 
@@ -138,7 +142,10 @@ public abstract class MessageRecord extends DisplayRecord {
                 int revisionNumber,
                 long pinnedUntil,
                 @Nullable RecipientId deletedBy,
-                @Nullable MessageExtras messageExtras)
+                CollapsedState collapsedState,
+                long collapsedHeadId,
+                @Nullable MessageExtras messageExtras,
+                boolean starred)
   {
     super(body, fromRecipient, toRecipient, dateSent, dateReceived,
           threadId, deliveryStatus, hasDeliveryReceipt, type,
@@ -160,7 +167,10 @@ public abstract class MessageRecord extends DisplayRecord {
     this.revisionNumber      = revisionNumber;
     this.pinnedUntil         = pinnedUntil;
     this.deletedBy           = deletedBy;
+    this.collapsedState      = collapsedState;
+    this.collapsedHeadId     = collapsedHeadId;
     this.messageExtras       = messageExtras;
+    this.starred             = starred;
   }
 
   public abstract boolean isMms();
@@ -300,7 +310,8 @@ public abstract class MessageRecord extends DisplayRecord {
     } else if (isReportedSpam()) {
       return staticUpdateDescription(context.getString(R.string.MessageRecord_reported_as_spam), Glyph.SPAM);
     } else if (isMessageRequestAccepted()) {
-      return staticUpdateDescription(context.getString(R.string.MessageRecord_you_accepted_the_message_request), Glyph.THREAD);
+      return isGroupV2() ? staticUpdateDescription(context.getString(R.string.MessageRecord_you_accepted_the_group_request), Glyph.THREAD)
+                         : fromRecipient(getToRecipient(), r -> context.getString(R.string.MessageRecord_you_accepted_s_message_request, r.getDisplayName(context)), Glyph.THREAD);
     } else if (isBlocked()) {
       return staticUpdateDescription(context.getString(isGroupV2() ? R.string.MessageRecord_you_blocked_this_group : R.string.MessageRecord_you_blocked_this_person), Glyph.BLOCK);
     } else if (isUnblocked()) {
@@ -582,11 +593,9 @@ public abstract class MessageRecord extends DisplayRecord {
   public static @NonNull UpdateDescription getGroupCallUpdateDescription(@NonNull Context context, @NonNull String body, boolean withTime) {
     GroupCallUpdateDetails groupCallUpdateDetails = GroupCallUpdateDetailsUtil.parse(body);
 
-    List<ServiceId> joinedMembers = Stream.of(groupCallUpdateDetails.inCallUuids)
-                                          .map(UuidUtil::parseOrNull)
-                                          .withoutNulls()
-                                          .<ServiceId>map(ACI::from)
-                                          .toList();
+    List<ServiceId> joinedMembers = groupCallUpdateDetails.inCallUuids.stream()
+                                                                      .map(UuidUtil::parseOrNull).filter(Objects::nonNull)
+                                                                      .<ServiceId>map(ACI::from).collect(Collectors.toList());
 
     UpdateDescription.SpannableFactory stringFactory = new GroupCallUpdateMessageFactory(context, joinedMembers, withTime, groupCallUpdateDetails);
 
@@ -799,6 +808,10 @@ public abstract class MessageRecord extends DisplayRecord {
     return deletedBy;
   }
 
+  public boolean isStarred() {
+    return starred;
+  }
+
   public boolean isPendingAdminDelete() {
     return messageExtras != null &&
            messageExtras.adminDeleteStatus != null &&
@@ -809,6 +822,14 @@ public abstract class MessageRecord extends DisplayRecord {
     return messageExtras != null &&
            messageExtras.adminDeleteStatus != null &&
            messageExtras.adminDeleteStatus.status == AdminDeleteStatus.Status.FAILED;
+  }
+
+  public CollapsedState getCollapsedState() {
+    return collapsedState;
+  }
+
+  public long getCollapsedHeadId() {
+    return collapsedHeadId;
   }
 
   public boolean isInMemoryMessageRecord() {
